src/styles/index.css
/* ... */
.form-content form .input textarea.disable {
  background: #f8f8fb;
  border-color: #f8f8fb;
}
.form-content form .input input {
  width: 100%;
  border: 1px solid #dcdcf0;
  padding: 19px 25px;
  font-size: 24px;
  border-radius: 6px;
}
.form-content form .input input.disable {
  background: #f8f8fb;
  border-color: #f8f8fb;
}
.form-content form .input input[type=checkbox] {
  display: none;
}
.form-content form .input input[type=checkbox]:checked + .eye {
  background-image: url("../img/eye-gray.svg");
}
.form-content form .input input[type=checkbox]:checked + .eye.blue {
  background-image: url("../img/eye-blue.svg");
}
.form-content form .input label:not(.showing) {
  position: absolute;
  left: calc(100% + 24px);
  bottom: 28px;
}
.form-content form .input .eye {
  cursor: pointer;
  width: 21px;
  height: 17px;
  background-image: url("../img/eye-gray-closed.svg");
}
.form-content form .input .eye.blue {
  background-image: url("../img/eye-blue-closed.svg");
}
.form-content form .showing {
  display: flex;
  justify-content: flex-end;
  cursor: pointer;
  position: absolute;
  right: 0px;
  top: 0px;
}
.form-content form .showing span {
  color: #3193f5;
  margin-left: 12px;
}
.form-content form .generate {
  font-size: 54px;
}
.form-content form .generate + p {
  color: #c8c8dc;
  text-align: center;
  width: 485px;
  padding: 24px 0 42px;
  margin: 0 auto;
}
.form-content form .button-area {
  display: flex;
  align-items: center;
  margin: 0 auto;
}
.form-content form .button-area .button {
  margin: 0 15px;
  width: 267px;
}
.form-content .form-seed-pharse .input, .form-content .form-restore-wallet .input {
  width: 100%;
  margin: 30px 0 54px;
}
.form-content .form-enter-key .input, .form-content .form-create-pass .input {
  margin: 30px 0 54px;
}
.form-content .form-enter-key .input > div, .form-content .form-create-pass .input > div {
  display: flex;
}
.form-content .form-enter-key .input > div > p, .form-content .form-create-pass .input > div > p {
  width: max-content;
}
.form-content .form-enter-key .input > div .popover-area2, .form-content .form-create-pass .input > div .popover-area2 {
  top: 0;
}
.form-content .form-walet-data .input {
  width: 100%;
}
.form-content .form-upload-file .button {
  margin-top: 18px;
}
nav {
  width: 100%;
  height: 90px;
  padding: 0 48px;
  background: #f9fafc;
  display: flex;
  align-items: center;
  margin-bottom: 45px;
}
@media (max-width: 1359px) {
  nav .logo {
    margin-right: 30px !important;
  }
}
@media (max-width: 1279px) {
  nav .logo {
    width: 30px;
    overflow: hidden;
  }
}
nav:after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  box-shadow: 0 4px 50px rgba(49, 151, 247, 0.1);
  z-index: 1;
}
nav:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  box-shadow: 0 60px 80px rgba(132, 149, 156, 0.15);
  z-index: 1;
}
nav > * {
  z-index: 2;
}
nav .logo {
  position: relative;
  left: 0;
  top: 0;
  margin-right: 90px;
}
nav .link {
  padding: 34px 30px 32px;
  font-size: 18px;
  font-weight: 700;
  text-transform: uppercase;
  border-radius: 10px;
}
nav .link.active {
  color: #3193f5;
  background: #fff;
  box-shadow: 0 30px 50px rgba(47, 128, 237, 0.2);
}
nav .profile-info {
  position: absolute;
  right: 0;
  height: 100%;
  display: flex;
  align-items: center;
}
nav .profile-info .info {
  border-right: 2px solid rgba(200, 200, 220, 0.2);
  padding-right: 32px;
  text-align: right;
}
nav .profile-info .info .amt {
  font-size: 24px;
  font-weight: 700;
}
nav .profile-info .info .amt span {
  font-size: 14px;
  text-transform: uppercase;
}
nav .profile-info .info .address {
  color: #c8c8dc;
  font-size: 14px;
  line-height: 19px;
  padding-top: 2px;
}
nav .profile-info .info .address img {
  bottom: -2px;
  cursor: pointer;
}
nav .profile-info .logout {
  width: 105px;
  height: 100%;
  background-image: url("../img/logout.svg");
  background-size: 25px 18px;
  background-position: center;
  background-repeat: no-repeat;
  cursor: pointer;
}
.copy {
  background: transparent;
  border: none;
  cursor: pointer;
}
.left-section {
  width: 417px;
  height: calc(100vh - 90px - 42px - 60px);
  position: fixed;
  left: 48px;
  top: 132px;
  z-index: 2;
}
.left-section .wallet-info {
  width: 100%;
  height: 254px;
  padding: 36px 30px;
  border-radius: 15px;
  background: linear-gradient(to left, #2f80ed 0%, #33adff 100%);
  margin-bottom: 48px;
  box-shadow: 0 10px 20px rgba(47, 128, 237, 0.35);
}
.left-section .wallet-info p {
  color: #fff;
  font-weight: 700;
}
.left-section .wallet-info .title .copy {
  color: #fff;
  font-size: 12px;
  font-weight: 500;
  float: right;
  opacity: 0.5;
}
.left-section .wallet-info .balance {
  font-size: 42px;
  line-height: 56px;
}
.left-section .wallet-info .balance span {
  color: #fff;
  font-weight: 700;
  text-transform: uppercase;
}
.left-section .wallet-info .conversions {
  opacity: 0.5;
  font-weight: 400;
  margin: -8px 0 30px;
}
.left-section .wallet-info .key {
  margin-top: 6px;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
}
.left-section .delegates-list .title {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  height: 40px;
  margin-bottom: 24px;
}
.left-section .delegates-list .list {
  width: 100%;
  max-height: calc(100vh - 90px - 42px - 254px - 45px - 64px - 114px);
  overflow: hidden;
  border-radius: 15px;
  box-shadow: 0 15px 100px rgba(132, 149, 156, 0.1);
  padding: 46px 0 60px;
  background: #fff;
}
.left-section .delegates-list .list .head {
  background: #fff !important;
  display: flex;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  padding: 17px 30px 12px;
  border-bottom: 1px solid #dcdcf0;
  border-radius: 15px 15px 0 0;
}
.left-section .delegates-list .list .head p {
  font-size: 12px;
  font-weight: 700;
}
/* ... */

